--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,11 @@ dependencies:
   persistent_bottom_nav_bar: ^6.2.1
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.2.0
-  easy_date_timeline: ^2.0.9
+  easy_date_timeline: ^1.1.3
+  flutter_advanced_calendar: ^1.4.3
+  countdown_progress_indicator: ^0.1.3
+  dio: ^5.8.0+1
+ 
 
 dev_dependencies:
   flutter_test:
